feat: rremoved attachment module
